# Metaheuristics-Scheudling

./: .gitignore  CMakeLists.txt  document.blg  document.tex  document0419.tex  main-course.cpp  main.cpp  main.cu  main0419.cpp  results.csv  results_dif_algo - figure.csv  results_dif_algo.csv  results_dif_algo.csv.xlsx  results_dif_sa_para.csv  results_dif_tabu_length.csv  results_dif_tabu_obj.csv
Result_csv/: results_Crossover.csv  results_DynamicTabu.csv  results_Elite_Top5Random.csv  results_Mutation.csv  results_SA_200,0.95,迭50_前5名取1.csv  results_SA_50&0.9,迭20_前5名取1+Tabu.csv  results_SA_50&0.9,迭20_菁英+Tabu.csv  results_SA_50,0.9,迭20_前5名取1.csv  results_Tabu_Dynamic.csv  results_gen10_gen20.csv  results_iter20_50_100.csv  results_neh.csv  results_全開.csv
data/: aco_20_tests.csv  best_parameters.csv  boxplot.py  iteration_scores.csv  map0.txt  map0_aco_20_tests.csv  map0_ga-aco_20_tests  map0_ga-aco_20_tests.csv  map1.txt  map1_aco_20_tests.csv  map1_ga-aco_20_tests.csv  map2_aco_20_tests.csv  map2_ga-aco_20_tests.csv  map3.txt  map3_aco_20_tests.csv  map3_ga-aco_20_tests.csv  map4.txt  map4_aco_20_tests.csv  map4_ga-aco_20_tests.csv  statistics.csv
include/: aco_env.cuh  config.h  kernels.cuh  map_data.cuh
result_test調參/: results_SA_1000&0.9_前5名取1.csv  results_SA_200,0.95,迭100_前5名取1.csv
src/: aco_env.cu  kernels.cu  main.cpp  main.cu  main_aco.cpp  main_batch.cpp  main_ga.cpp  map_data.cu
