cmake_minimum_required(VERSION 3.12)

set(MY_PROJECT "Hw1")
set(MY_EXECUTABLE "Hw1")

project("Hw1"
    VERSION 0.1.0
    LANGUAGES CXX C CUDA
    DESCRIPTION "Hw1"
)

add_executable(${MY_EXECUTABLE})

if(WIN32)
    # Windows 系統
    message(STATUS "Detected System: Windows")
    target_compile_definitions(${MY_EXECUTABLE} PRIVATE WINDOWS)

elseif(APPLE)
    # macOS 系統
    message(STATUS "Detected System: macOS")
    target_compile_definitions(${MY_EXECUTABLE} PRIVATE MACOS)

elseif(UNIX AND NOT APPLE)
    # Linux 系統 (注意：CMake 中 macOS 也被視為 UNIX，所以要排除 APPLE)
    message(STATUS "Detected System: Linux")
    target_compile_definitions(${MY_EXECUTABLE} PRIVATE LINUX)

else()
    message(WARNING "Unknown System")
endif()

# ==========================================
# 強制關閉所有編譯器 Warning
# ==========================================
if(MSVC)
    # Windows/MSVC 環境使用 /W0 關閉警告
    target_compile_options(${MY_EXECUTABLE} PRIVATE
        $<$<COMPILE_LANGUAGE:C>:/W0>
        $<$<COMPILE_LANGUAGE:CXX>:/W0>
    )
else()
    # Linux/macOS (GCC/Clang) 環境使用 -w 關閉警告
    target_compile_options(${MY_EXECUTABLE} PRIVATE
        $<$<COMPILE_LANGUAGE:C>:-w>
        $<$<COMPILE_LANGUAGE:CXX>:-w>
    )
endif()

# 針對 CUDA (NVCC) 強制關閉警告
target_compile_options(${MY_EXECUTABLE} PRIVATE
    $<$<COMPILE_LANGUAGE:CUDA>:-w>
)

set_target_properties(${MY_EXECUTABLE}
    PROPERTIES
    CUDA_STANDARD 17
    CUDA_STANDARD_REQUIRED ON
    CUDA_SEPARABLE_COMPILATION ON
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
    C_STANDARD 11
    C_STANDARD_REQUIRED ON
    C_EXTENSIONS OFF
)

# Find external libraries

find_package(OpenCV REQUIRED)
find_package(OpenMP REQUIRED)
find_package(CUDAToolkit REQUIRED)

include_directories("include\\")
target_include_directories(${MY_EXECUTABLE} PRIVATE "include"
    ${STB_INCLUDE_DIRS}
    ${CUDAToolkit_INCLUDE_DIRS}
)
file(GLOB MY_SOURCE CONFIGURE_DEPENDS
    "src/*.cpp"
    "src/*.cc"
    "src/*.c" # Add .c files to be compiled
    "src/*.cu" # Add .c files to be compiled
)
target_sources(${MY_EXECUTABLE} PRIVATE ${MY_SOURCE})

target_link_libraries(${MY_EXECUTABLE} PRIVATE

    ${OpenCV_LIBS}
    OpenMP::OpenMP_CXX
    CUDA::cudart
)

